a lot of things

--- a/Papers/WUT-Master-Thesis/Grabski-Adam-Magisterska.tex
+++ b/Papers/WUT-Master-Thesis/Grabski-Adam-Magisterska.tex
@@ -141,7 +141,11 @@ C-=-1 proponuje nowe podejście do konstrukcji kompilatora, umożliwiające wpro
 
 
 \newpage
-\appendix{Nazwa załącznika 2}
+\appendix{Gramatyka języka C-=-1}
+\label{appendix:grammar}
+\lstinputlisting[
+    breaklines=true,
+    tabsize=2]{../../Grammar/Revision0/CMinusEqualsMinus1Revision0.g4}
 
 
 % Używając powyższych spisów jako szablonu,
