--- a/Papers/WUT-Master-Thesis/bibliografia.bib
+++ b/Papers/WUT-Master-Thesis/bibliografia.bib
@@ -18,6 +18,30 @@
   year={2007},
   publisher={Consortium for Computing Sciences in Colleges}
 }
+@book{klabnik2019rust,
+  title={The Rust Programming Language (Covers Rust 2018)},
+  author={Klabnik, Steve and Nichols, Carol},
+  year={2019},
+  publisher={No Starch Press}
+}
+@article{oop_paradignm,
+author = {Wegner, Peter},
+title = {Concepts and Paradigms of Object-Oriented Programming},
+year = {1990},
+issue_date = {Aug. 1990},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {1},
+number = {1},
+issn = {1055-6400},
+url = {https://doi.org/10.1145/382192.383004},
+doi = {10.1145/382192.383004},
+abstract = {We address the following questions for object-oriented programming:What is it?What are its goals?What are its origins?What are its paradigms?What are its design alternatives?What are its models of concurrency?What are its formal computational models?What comes after object-oriented programming?Starting from software engineering goals, we examine the origins and paradigms of object-oriented programming, explore its language design alternatives, consider its models of concurrency, and review its mathematical models to make them accessible to nonmathematical readers. Finally, we briefly speculate on what may come after object-oriented programming and conclude that it is a robust component-based modeling paradigm that is both effective and fundamental. This paper expands on the OOPSLA 89 keynote talk.},
+journal = {SIGPLAN OOPS Mess.},
+month = {aug},
+pages = {7–87},
+numpages = {81}
+}
 
 @article{becker2007:type_erasure,
   title={Type erasure in C++: The glue between object oriented and generic programming},
