generics and some other stuff

--- a/Papers/WUT-Master-Thesis/bibliografia.bib
+++ b/Papers/WUT-Master-Thesis/bibliografia.bib
@@ -24,6 +24,14 @@
   year={2019},
   publisher={No Starch Press}
 }
+@inproceedings{bunder2019decoupling_lsp,
+  title={Decoupling Language and Editor-The Impact of the Language Server Protocol on Textual Domain-Specific Languages.},
+  author={B{\"u}nder, Hendrik},
+  booktitle={MODELSWARD},
+  pages={129--140},
+  year={2019}
+}
+
 @article{oop_paradignm,
 author = {Wegner, Peter},
 title = {Concepts and Paradigms of Object-Oriented Programming},
@@ -455,6 +463,14 @@ institution = {ECMA (European Association for Standardizing Information and Comm
   booktitle={Proceedings of the ACM SIGPLAN 2001 conference on Programming language design and implementation},
   pages={1--12},
   year={2001}
+}
+@book{cLangStandard,
+  title={Programming Language - C (ISO/IEC 9899: 1999, IDT)},
+  author={Malaysia. Jabatan Standard},
+  series={Malaysian standard},
+  url={https://books.google.pl/books?id=wX-GoAEACAAJ},
+  year={2003},
+  publisher={Jabatan Standard Malaysia}
 }
 
 % Źródło innego typu, np. repozytorium na GitHubie.
